xidlc/src/driver/tests/snapshots/xidlc__driver__tests__rs_rs_gen__struct_def.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
struct_def.rs
===============

//! Generated by xidlc.
#![allow(dead_code)]
#![allow(unused_imports)]
#![allow(non_upper_case_globals)]
#![allow(non_snake_case)]
#![allow(unused_variables)]
#![allow(unreachable_patterns)]

use std::collections::BTreeMap;
use std::ffi::c_void;



    
pub struct A {


}

impl A {
    
    pub const SERIALIZE_KIND: xidl_xcdr::SerializeKind =
        xidl_xcdr::SerializeKind::Cdr;
    
}


impl xidl_xcdr::XcdrSerialize for A {
    fn serialize_kind(&self) -> xidl_xcdr::SerializeKind {
        Self::SERIALIZE_KIND
    }

    fn serialize_with<S: xidl_xcdr::XcdrSerializer + ?Sized>(
        &self,
        serializer: &mut S,
    ) -> xidl_xcdr::error::XcdrResult<()> {
        serializer.begin_struct_with_kind(Self::SERIALIZE_KIND)?;


        serializer.end_struct()?;
        Ok(())
    }
}



impl xidl_xcdr::XcdrDeserialize for A {
    fn deserialize<D: xidl_xcdr::XcdrDeserializer + ?Sized>(
        deserializer: &mut D,
    ) -> xidl_xcdr::error::XcdrResult<Self> {


        Ok(Self {


        })
    }
}


pub struct A {


    pub a: i32,

}

impl A {
    
    pub const SERIALIZE_KIND: xidl_xcdr::SerializeKind =
        xidl_xcdr::SerializeKind::Cdr;
    
}


impl xidl_xcdr::XcdrSerialize for A {
    fn serialize_kind(&self) -> xidl_xcdr::SerializeKind {
        Self::SERIALIZE_KIND
    }

    fn serialize_with<S: xidl_xcdr::XcdrSerializer + ?Sized>(
        &self,
        serializer: &mut S,
    ) -> xidl_xcdr::error::XcdrResult<()> {
        serializer.begin_struct_with_kind(Self::SERIALIZE_KIND)?;



        serializer.begin_field(xidl_xcdr::FieldId(1u32), false, 0)?;

        xidl_xcdr::XcdrSerialize::serialize_with(&self.a, serializer)?;
        serializer.end_field()?;

        serializer.end_struct()?;
        Ok(())
    }
}



impl xidl_xcdr::XcdrDeserialize for A {
    fn deserialize<D: xidl_xcdr::XcdrDeserializer + ?Sized>(
        deserializer: &mut D,
    ) -> xidl_xcdr::error::XcdrResult<Self> {


        let a = xidl_xcdr::XcdrDeserialize::deserialize(deserializer)?;

        Ok(Self {


            a,

        })
    }
}


pub struct A {


    pub a: ::A::b,

}

impl A {
    
    pub const SERIALIZE_KIND: xidl_xcdr::SerializeKind =
        xidl_xcdr::SerializeKind::Cdr;
    
}


impl xidl_xcdr::XcdrSerialize for A {
    fn serialize_kind(&self) -> xidl_xcdr::SerializeKind {
        Self::SERIALIZE_KIND
    }

    fn serialize_with<S: xidl_xcdr::XcdrSerializer + ?Sized>(
        &self,
        serializer: &mut S,
    ) -> xidl_xcdr::error::XcdrResult<()> {
        serializer.begin_struct_with_kind(Self::SERIALIZE_KIND)?;



        serializer.begin_field(xidl_xcdr::FieldId(1u32), false, 0)?;

        xidl_xcdr::XcdrSerialize::serialize_with(&self.a, serializer)?;
        serializer.end_field()?;

        serializer.end_struct()?;
        Ok(())
    }
}



impl xidl_xcdr::XcdrDeserialize for A {
    fn deserialize<D: xidl_xcdr::XcdrDeserializer + ?Sized>(
        deserializer: &mut D,
    ) -> xidl_xcdr::error::XcdrResult<Self> {


        let a = xidl_xcdr::XcdrDeserialize::deserialize(deserializer)?;

        Ok(Self {


            a,

        })
    }
}


pub struct A {

    pub base: B,


}

impl A {
    
    pub const SERIALIZE_KIND: xidl_xcdr::SerializeKind =
        xidl_xcdr::SerializeKind::Cdr;
    
}


impl xidl_xcdr::XcdrSerialize for A {
    fn serialize_kind(&self) -> xidl_xcdr::SerializeKind {
        Self::SERIALIZE_KIND
    }

    fn serialize_with<S: xidl_xcdr::XcdrSerializer + ?Sized>(
        &self,
        serializer: &mut S,
    ) -> xidl_xcdr::error::XcdrResult<()> {
        serializer.begin_struct_with_kind(Self::SERIALIZE_KIND)?;

        xidl_xcdr::XcdrSerialize::serialize_with(&self.base, serializer)?;


        serializer.end_struct()?;
        Ok(())
    }
}



impl xidl_xcdr::XcdrDeserialize for A {
    fn deserialize<D: xidl_xcdr::XcdrDeserializer + ?Sized>(
        deserializer: &mut D,
    ) -> xidl_xcdr::error::XcdrResult<Self> {

        let base = xidl_xcdr::XcdrDeserialize::deserialize(deserializer)?;


        Ok(Self {

            base,


        })
    }
}


pub struct _A {


}

impl _A {
    
    pub const SERIALIZE_KIND: xidl_xcdr::SerializeKind =
        xidl_xcdr::SerializeKind::Cdr;
    
}


impl xidl_xcdr::XcdrSerialize for _A {
    fn serialize_kind(&self) -> xidl_xcdr::SerializeKind {
        Self::SERIALIZE_KIND
    }

    fn serialize_with<S: xidl_xcdr::XcdrSerializer + ?Sized>(
        &self,
        serializer: &mut S,
    ) -> xidl_xcdr::error::XcdrResult<()> {
        serializer.begin_struct_with_kind(Self::SERIALIZE_KIND)?;


        serializer.end_struct()?;
        Ok(())
    }
}



impl xidl_xcdr::XcdrDeserialize for _A {
    fn deserialize<D: xidl_xcdr::XcdrDeserializer + ?Sized>(
        deserializer: &mut D,
    ) -> xidl_xcdr::error::XcdrResult<Self> {


        Ok(Self {


        })
    }
}


pub struct _Custom {


    pub var_inner: Inner,

}

impl _Custom {
    
    pub const SERIALIZE_KIND: xidl_xcdr::SerializeKind =
        xidl_xcdr::SerializeKind::Cdr;
    
}


impl xidl_xcdr::XcdrSerialize for _Custom {
    fn serialize_kind(&self) -> xidl_xcdr::SerializeKind {
        Self::SERIALIZE_KIND
    }

    fn serialize_with<S: xidl_xcdr::XcdrSerializer + ?Sized>(
        &self,
        serializer: &mut S,
    ) -> xidl_xcdr::error::XcdrResult<()> {
        serializer.begin_struct_with_kind(Self::SERIALIZE_KIND)?;



        serializer.begin_field(xidl_xcdr::FieldId(1u32), false, 0)?;

        xidl_xcdr::XcdrSerialize::serialize_with(&self.var_inner, serializer)?;
        serializer.end_field()?;

        serializer.end_struct()?;
        Ok(())
    }
}



impl xidl_xcdr::XcdrDeserialize for _Custom {
    fn deserialize<D: xidl_xcdr::XcdrDeserializer + ?Sized>(
        deserializer: &mut D,
    ) -> xidl_xcdr::error::XcdrResult<Self> {


        let var_inner = xidl_xcdr::XcdrDeserialize::deserialize(deserializer)?;

        Ok(Self {


            var_inner,

        })
    }
}


pub struct HelloWorld {


    pub a: u8,

    pub b: [u16; 10],

    pub c: [[String; 20]; 10],

    pub c: Vec<u8>,

    pub d: String,

    pub d: String,

    pub d: *mut c_void,

}

impl HelloWorld {
    
    pub const SERIALIZE_KIND: xidl_xcdr::SerializeKind =
        xidl_xcdr::SerializeKind::Cdr;
    
}


impl xidl_xcdr::XcdrSerialize for HelloWorld {
    fn serialize_kind(&self) -> xidl_xcdr::SerializeKind {
        Self::SERIALIZE_KIND
    }

    fn serialize_with<S: xidl_xcdr::XcdrSerializer + ?Sized>(
        &self,
        serializer: &mut S,
    ) -> xidl_xcdr::error::XcdrResult<()> {
        serializer.begin_struct_with_kind(Self::SERIALIZE_KIND)?;



        serializer.begin_field(xidl_xcdr::FieldId(1u32), false, 0)?;

        xidl_xcdr::XcdrSerialize::serialize_with(&self.a, serializer)?;
        serializer.end_field()?;


        serializer.begin_field(xidl_xcdr::FieldId(2u32), false, 0)?;

        xidl_xcdr::XcdrSerialize::serialize_with(&self.b, serializer)?;
        serializer.end_field()?;


        serializer.begin_field(xidl_xcdr::FieldId(3u32), false, 0)?;

        xidl_xcdr::XcdrSerialize::serialize_with(&self.c, serializer)?;
        serializer.end_field()?;


        serializer.begin_field(xidl_xcdr::FieldId(4u32), false, 0)?;

        xidl_xcdr::XcdrSerialize::serialize_with(&self.c, serializer)?;
        serializer.end_field()?;


        serializer.begin_field(xidl_xcdr::FieldId(5u32), false, 0)?;

        xidl_xcdr::XcdrSerialize::serialize_with(&self.d, serializer)?;
        serializer.end_field()?;


        serializer.begin_field(xidl_xcdr::FieldId(6u32), false, 0)?;

        xidl_xcdr::XcdrSerialize::serialize_with(&self.d, serializer)?;
        serializer.end_field()?;


        serializer.begin_field(xidl_xcdr::FieldId(7u32), false, 0)?;

        xidl_xcdr::XcdrSerialize::serialize_with(&self.d, serializer)?;
        serializer.end_field()?;

        serializer.end_struct()?;
        Ok(())
    }
}



impl xidl_xcdr::XcdrDeserialize for HelloWorld {
    fn deserialize<D: xidl_xcdr::XcdrDeserializer + ?Sized>(
        deserializer: &mut D,
    ) -> xidl_xcdr::error::XcdrResult<Self> {


        let a = xidl_xcdr::XcdrDeserialize::deserialize(deserializer)?;

        let b = xidl_xcdr::XcdrDeserialize::deserialize(deserializer)?;

        let c = xidl_xcdr::XcdrDeserialize::deserialize(deserializer)?;

        let c = xidl_xcdr::XcdrDeserialize::deserialize(deserializer)?;

        let d = xidl_xcdr::XcdrDeserialize::deserialize(deserializer)?;

        let d = xidl_xcdr::XcdrDeserialize::deserialize(deserializer)?;

        let d = xidl_xcdr::XcdrDeserialize::deserialize(deserializer)?;

        Ok(Self {


            a,

            b,

            c,

            c,

            d,

            d,

            d,

        })
    }
}
