xidlc/src/driver/tests/snapshots/xidlc__driver__tests__rs_rs_gen__struct_derive.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
struct_derive.rs
===============
#![allow(unused_imports)]
#![allow(non_upper_case_globals)]
#![allow(non_snake_case)]
#![allow(unused_variables)]
#![allow(unreachable_patterns)]

#[derive(Debug)]
pub struct A{
}

impl A{
    pub const SERIALIZE_KIND:xidl_xcdr::SerializeKind = xidl_xcdr::SerializeKind::Cdr;
}

impl xidl_xcdr::XcdrSerialize for A{
    fn serialize_kind(&self)->xidl_xcdr::SerializeKind{
        Self::SERIALIZE_KIND
    }

    fn serialize_with<S:xidl_xcdr::XcdrSerializer+?Sized>(
    &self,
    serializer:&mut S,
    )->xidl_xcdr::error::XcdrResult<()>{
        serializer.begin_struct_with_kind(Self::SERIALIZE_KIND)?;
        serializer.end_struct()?;
        Ok(())
    }
}

impl xidl_xcdr::XcdrDeserialize for A{
    fn deserialize<D:xidl_xcdr::XcdrDeserializer+?Sized>(
    deserializer:&mut D,
    )->xidl_xcdr::error::XcdrResult<Self>{
        Ok(Self{
        })
    }
}

#[derive(Debug,::serde::Serialize)]
pub struct A{
}

impl A{
    pub const SERIALIZE_KIND:xidl_xcdr::SerializeKind = xidl_xcdr::SerializeKind::Cdr;
}

impl xidl_xcdr::XcdrSerialize for A{
    fn serialize_kind(&self)->xidl_xcdr::SerializeKind{
        Self::SERIALIZE_KIND
    }

    fn serialize_with<S:xidl_xcdr::XcdrSerializer+?Sized>(
    &self,
    serializer:&mut S,
    )->xidl_xcdr::error::XcdrResult<()>{
        serializer.begin_struct_with_kind(Self::SERIALIZE_KIND)?;
        serializer.end_struct()?;
        Ok(())
    }
}

impl xidl_xcdr::XcdrDeserialize for A{
    fn deserialize<D:xidl_xcdr::XcdrDeserializer+?Sized>(
    deserializer:&mut D,
    )->xidl_xcdr::error::XcdrResult<Self>{
        Ok(Self{
        })
    }
}
