xidlc/src/driver/tests/snapshots/xidlc__driver__tests__rs_rs_gen__struct_empty.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
struct_empty.rs
===============
//! Generated by xidlc.
//! xidlc_version: 0.1.0
//! xidlc_timestamp: 1970-01-01 00:00
#![allow(dead_code)]
#![allow(unused_imports)]
#![allow(non_upper_case_globals)]
#![allow(non_snake_case)]
#![allow(unused_variables)]
#![allow(unreachable_patterns)]

use std::collections::BTreeMap;
use std::ffi::c_void;
