xidlc/src/driver/tests/snapshots/xidlc__driver__tests__rs_rs_gen__union_dcl.snap
---
source: xidlc/src/driver/tests/mod.rs
expression: output
---
===============
union_dcl.rs
===============

//! Generated by xidlc.
#![allow(dead_code)]
#![allow(unused_imports)]
#![allow(non_upper_case_globals)]
#![allow(non_snake_case)]
#![allow(unused_variables)]
#![allow(unreachable_patterns)]

use std::collections::BTreeMap;
use std::ffi::c_void;



    
pub struct B {
    tag: i32,
    data: BData,
}


union BData {

}

impl Drop for B {
    fn drop(&mut self) {
        match self.tag {
            
        }
    }
}

impl B {
    
        pub const SERIALIZE_KIND: xidl_xcdr::SerializeKind =
            xidl_xcdr::SerializeKind::Cdr;
    

    


    pub fn tag(&self) -> &i32 {
        &self.tag
    }
}






impl xidl_xcdr::XcdrSerialize for B {
    fn serialize_kind(&self) -> xidl_xcdr::SerializeKind {
        Self::SERIALIZE_KIND
    }

    fn serialize_with<S: xidl_xcdr::XcdrSerializer + ?Sized>(
        &self,
        serializer: &mut S,
    ) -> xidl_xcdr::error::XcdrResult<()> {
        serializer.begin_struct_with_kind(Self::SERIALIZE_KIND)?;
        serializer.begin_field(xidl_xcdr::FieldId(0), false, 0)?;
        xidl_xcdr::XcdrSerialize::serialize_with(&self.tag, serializer)?;
        serializer.end_field()?;
        match self.tag {
            
            
                _ => {}
            
        }
        serializer.end_struct()?;
        Ok(())
    }
}



impl xidl_xcdr::XcdrDeserialize for B {
    fn deserialize<D: xidl_xcdr::XcdrDeserializer + ?Sized>(
        deserializer: &mut D,
    ) -> xidl_xcdr::error::XcdrResult<Self> {
        let tag = xidl_xcdr::XcdrDeserialize::deserialize(deserializer)?;
        let data = match tag {
            
            
                    _ => { todo!() }
            
        };
        Ok(Self { tag, data } )
    }
}


pub struct C {
    tag: i32,
    data: CData,
}


union CData {

    a: core::mem::ManuallyDrop<i32>,

    b: core::mem::ManuallyDrop<String>,

}

impl Drop for C {
    fn drop(&mut self) {
        match self.tag {
            
                0 => {
                    unsafe {
                        core::mem::ManuallyDrop::drop(&mut self.data.a);
                    }
                }
            
                1 => {
                    unsafe {
                        core::mem::ManuallyDrop::drop(&mut self.data.b);
                    }
                }
            
        }
    }
}

impl C {
    
        pub const SERIALIZE_KIND: xidl_xcdr::SerializeKind =
            xidl_xcdr::SerializeKind::Cdr;
    

    
        pub fn new_a(value: i32) -> Self {
            
            
            Self {
                tag: 0,
                data: CData {
                    a: core::mem::ManuallyDrop::new(value),
                }
            }
        }

        pub fn is_a(&self) -> bool {
            matches!(self.tag, 0)
        }

        pub unsafe fn as_a(&self) -> &i32 {
            unsafe { &self.data.a }
        }

        pub unsafe fn as_a_mut(&mut self) -> &mut i32 {
            unsafe { &mut self.data.a }
        }

        pub unsafe fn into_a(self) -> i32 {
            unsafe {
                let mut forget = core::mem::ManuallyDrop::new(self);
                core::mem::ManuallyDrop::take(&mut forget.data.a)
            }
        }
    
        pub fn new_b(value: String) -> Self {
            
            
            Self {
                tag: 1,
                data: CData {
                    b: core::mem::ManuallyDrop::new(value),
                }
            }
        }

        pub fn is_b(&self) -> bool {
            matches!(self.tag, 1)
        }

        pub unsafe fn as_b(&self) -> &String {
            unsafe { &self.data.b }
        }

        pub unsafe fn as_b_mut(&mut self) -> &mut String {
            unsafe { &mut self.data.b }
        }

        pub unsafe fn into_b(self) -> String {
            unsafe {
                let mut forget = core::mem::ManuallyDrop::new(self);
                core::mem::ManuallyDrop::take(&mut forget.data.b)
            }
        }
    


    pub fn tag(&self) -> &i32 {
        &self.tag
    }
}






impl xidl_xcdr::XcdrSerialize for C {
    fn serialize_kind(&self) -> xidl_xcdr::SerializeKind {
        Self::SERIALIZE_KIND
    }

    fn serialize_with<S: xidl_xcdr::XcdrSerializer + ?Sized>(
        &self,
        serializer: &mut S,
    ) -> xidl_xcdr::error::XcdrResult<()> {
        serializer.begin_struct_with_kind(Self::SERIALIZE_KIND)?;
        serializer.begin_field(xidl_xcdr::FieldId(0), false, 0)?;
        xidl_xcdr::XcdrSerialize::serialize_with(&self.tag, serializer)?;
        serializer.end_field()?;
        match self.tag {
            
                0 => {
                    let value = unsafe { self.data.a.as_ref() };
                    serializer.begin_field(xidl_xcdr::FieldId(1u32), false, 0)?;
                    xidl_xcdr::XcdrSerialize::serialize_with(value, serializer)?;
                    serializer.end_field()?;
                },
            
                1 => {
                    let value = unsafe { self.data.b.as_ref() };
                    serializer.begin_field(xidl_xcdr::FieldId(2u32), false, 0)?;
                    xidl_xcdr::XcdrSerialize::serialize_with(value, serializer)?;
                    serializer.end_field()?;
                },
            
            
                _ => {}
            
        }
        serializer.end_struct()?;
        Ok(())
    }
}



impl xidl_xcdr::XcdrDeserialize for C {
    fn deserialize<D: xidl_xcdr::XcdrDeserializer + ?Sized>(
        deserializer: &mut D,
    ) -> xidl_xcdr::error::XcdrResult<Self> {
        let tag = xidl_xcdr::XcdrDeserialize::deserialize(deserializer)?;
        let data = match tag {
            
                0 => {
                    CData {
                        a: core::mem::ManuallyDrop::new(xidl_xcdr::XcdrDeserialize::deserialize(deserializer)?),
                    }
                }
            
                1 => {
                    CData {
                        b: core::mem::ManuallyDrop::new(xidl_xcdr::XcdrDeserialize::deserialize(deserializer)?),
                    }
                }
            
            
                    _ => { todo!() }
            
        };
        Ok(Self { tag, data } )
    }
}
